# oh-rbt

warehouse_sim_pkg/: CMakeLists.txt  README.md  package.xml
warehouse_sim_pkg/launch/: warehouse.launch
warehouse_sim_pkg/models/box/: model.config  model.sdf
warehouse_sim_pkg/models/robot/: model.sdf
warehouse_sim_pkg/models/shelf/: model.config  model.sdf
warehouse_sim_pkg/scripts/: robot_ctrl.py
warehouse_sim_pkg/worlds/: warehouse.world
