<?xml version="1.0"?>
<package format="2">
  <name>warehouse_sim_pkg</name>
  <version>0.0.1</version>
  <description>warehouse gazebo sim</description>
  <maintainer email="you@todo.todo">you</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>gazebo_ros</depend>
</package>